--- a/css/desktop/page5.css
+++ b/css/desktop/page5.css
@@ -19,7 +19,7 @@ body{
     25%{
         top:0;
         left:950px;
-        background:url(../../img/mmm.gif)no-repeat center center/cover;
+        background:url(../../img/gaurav.gif)no-repeat center center/cover;
         /* border-radius:50% 0 0 0; */
     }
     50%{
