--- a/css/desktop/page5.css
+++ b/css/desktop/page5.css
@@ -18,7 +18,7 @@ body{
 @keyframes animate1{
     25%{
         top:0;
-        left:950px;
+        right:950px;
         background:url(../../img/gaurav.gif)no-repeat center center/cover;
         /* border-radius:50% 0 0 0; */
     }
