--- a/css/desktop/page4.css
+++ b/css/desktop/page4.css
@@ -1,22 +1,7 @@
-body{
+body {
     font-family:Arial, Helvetica, sans-serif;
-    background:url(../../img/nnn.jpeg)no-repeat center center/cover;
-    color:brown;
-}
-
-h1{
-    color:#333;
-    display: flex;
-    justify-content: center;
-    font-size:50px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-p{
-    display:flex;
-    justify-content: center
-    ;
-    font-size:25px;
+    background:url(../../img/om.jpeg)no-repeat center center/cover;
+    color:#fff;
 }
 
 header{
@@ -25,36 +10,46 @@ header{
     justify-content: center;
     align-items:center;
     text-align:center;
-    /* height:100vh;
-    padding: 0 2rem;
-    margin-bottom:0.75rem; */
     font-size: 20px;
     --animate-speed:1s;
-}  
+}
 
-.box{
-    padding: 1rem;
-    margin:1rem;
-/* justify-content: center; */
-    /* padding:0.75rem;
-    width:2rem; */
+header p{
+    color:purple;
+    font-size: 25px;
+
+}
+
+.container{
+    display:inline-block;
+}
+
+
+.container h2{
+    font-family: Arial, Helvetica, sans-serif;
+    color:crimson;
 }
 
 img{
-    width:400px;
-    /* height:900px; */
-justify-content: center;
-    
+    display:inline-block;
+    justify-content: space-evenly;
+    align-items:center;
+    width:430px;
+    height:300px; 
 }
 
-/* .container{
-    display:flex;
-} */
+.box{
+    display:inline-block;
+    justify-content: center;
+    padding: 3rem;
+    margin:1rem;
+}
+
 .btns{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin:0.4; */
+    /* margin:0.4rem; */
 }
 .btn {
     display:inline-block;
@@ -77,13 +72,20 @@ justify-content: center;
     color:#fff;
 }
 
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color:crimson;
+    font-size:2rem;
+}
+
 /* page animation */
-#page-4 h1{
+#page-3 h1{
 transform: translateY(-1200px);
 animation:heading var(--animate-speed)forwards ease-in;
+
 } 
 
-#page-4 p{
+#page-3 p{
 transform: translateX(-1800px);
 animation:text var(--animate-speed)forwards ease-in 1s;
 } 
@@ -100,7 +102,6 @@ to{
     transform: translateX(0); 
 }
 }
-
 
 h1.a{
     text-shadow: 0.2rem 0.2rem steelblue;
