--- a/css/desktop/page5.css
+++ b/css/desktop/page5.css
@@ -1,54 +1,60 @@
 body{
-    background:#333;
+    font-family:Arial, Helvetica, sans-serif;
+    background:url(../../img/nnn.jpeg)no-repeat center center/cover;
+    color:brown;
 }
+
+h1{
+    color:#333;
+    display: flex;
+    justify-content: center;
+    font-size:50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p{
+    display:flex;
+    justify-content: center
+    ;
+    font-size:25px;
+}
+
+header{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
+    text-align:center;
+    /* height:100vh;
+    padding: 0 2rem;
+    margin-bottom:0.75rem; */
+    font-size: 20px;
+    --animate-speed:1s;
+}  
 
 .box{
-    background:url(../../img/mmm.gif)no-repeat center center/cover;
-    width: 400px;
-    height:300px;
-    position: relative;
-    top:0;
-    left:0;
-    animation:animate1 5s forwards ease-in-out;
-
+    padding: 1rem;
+    margin:1rem;
+/* justify-content: center; */
+    /* padding:0.75rem;
+    width:2rem; */
 }
 
-
-
-@keyframes animate1{
-    25%{
-        top:0;
-        left:950px;
-        background:url(../../img/nnnn.gif)no-repeat center center/cover;
-        /* border-radius:50% 0 0 0; */
-    }
-    50%{
-        top:300px;
-        left:950px;
-        background:url(../../img/nnnn.gif)no-repeat center center/cover;;;
-        /* border-radius:50% 50% 0 0; */
-    }
-    75%{
-        top:300px;
-        left:0;
-        background:url(../../img/44.gif)no-repeat center center/cover;
-        /* border-radius:50% 50% 50% 0; */
-    }
-    100%{
-        top:0;
-        left:0;
-        background:url(../../img/vvvv.gif)no-repeat center center/cover;
-        /* border-radius:50% 50% 50% 50%; */
-
-    }
-
+img{
+    width:400px;
+    /* height:900px; */
+justify-content: center;
+    
 }
 
+/* .container{
+    display:flex;
+} */
 .btns{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin:14rem;
+    /* margin:0.4; */
 }
 .btn {
     display:inline-block;
@@ -67,6 +73,35 @@ body{
 
 
 .btn:hover{
-    background:orange;
+    background:#333;
     color:#fff;
+}
+
+/* page animation */
+#page-4 h1{
+transform: translateY(-1200px);
+animation:heading var(--animate-speed)forwards ease-in;
+} 
+
+#page-4 p{
+transform: translateX(-1800px);
+animation:text var(--animate-speed)forwards ease-in 1s;
+} 
+
+/* keyframe */
+@keyframes heading{
+to{
+    transform: translateY(0); 
+}
+}
+
+@keyframes text{
+to{
+    transform: translateX(0); 
+}
+}
+
+
+h1.a{
+    text-shadow: 0.2rem 0.2rem steelblue;
 }
