--- a/css/mobile/page4.css
+++ b/css/mobile/page4.css
@@ -1,20 +1,7 @@
-body{
+body {
     font-family:Arial, Helvetica, sans-serif;
-    background:url(../../img/nnn.jpeg)no-repeat center center/cover;
-    color:brown;
-}
-
-h1{
-    color:#333;
-    display: flex;
-    justify-content: center;
-    font-size:40px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-p{
-    font-size:15px;
-    margin: 0 2rem;
+    background:url(../../img/om.jpeg)no-repeat center center/cover;
+    color:#fff;
 }
 
 header{
@@ -23,33 +10,43 @@ header{
     justify-content: center;
     align-items:center;
     text-align:center;
-    /* height:100vh;
-    padding: 0 2rem;
-    margin-bottom:0.75rem; */
-    font-size: 20px;
+    font-size: 16px;
     --animate-speed:1s;
-}  
+}
 
-.box{
-    display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-margin:1rem;
-    /* padding:0.75rem;
-    width:2rem; */
+header p{
+    color:purple;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.container{
+    display:flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+}
+
+
+.container h2{
+    font-family: Arial, Helvetica, sans-serif;
+    color:crimson;
 }
 
 img{
-    width:270px;
-    
-    
+    width:250px;
+    height:250px; 
 }
 
-/* .container{
+.box{
     display:flex;
-} */
-
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* padding: 3rem; */
+    /* margin:1rem; */
+}
 .btns{
     display:flex;
     align-items: center;
@@ -76,13 +73,24 @@ img{
     color:#fff;
 }
 
+h2{
+    font-size: 20px;
+}
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color:crimson;
+    font-size:1rem;
+}
+
 /* page animation */
-#page-4 h1{
+#page-3 h1{
 transform: translateY(-1200px);
 animation:heading var(--animate-speed)forwards ease-in;
+
 } 
 
-#page-4 p{
+#page-3 p{
 transform: translateX(-1800px);
 animation:text var(--animate-speed)forwards ease-in 1s;
 } 
@@ -99,7 +107,6 @@ to{
     transform: translateX(0); 
 }
 }
-
 
 h1.a{
     text-shadow: 0.2rem 0.2rem steelblue;
