--- a/css/mobile/page5.css
+++ b/css/mobile/page5.css
@@ -1,75 +1,106 @@
 body{
-    background:#333;
+    font-family:Arial, Helvetica, sans-serif;
+    background:url(../../img/nnn.jpeg)no-repeat center center/cover;
+    color:brown;
 }
 
-.box{
-    background:url(../../img/mmm.gif)no-repeat center center/cover;
-    width: 200px;
-    height:200px;
-    position: relative;
-    top:0;
-    left:0;
-    animation:animate1 5s forwards ease-in-out;
-
-}
-
-
-
-@keyframes animate1{
-    25%{
-        top:0;
-        left:390px;
-        background:url(../../img/mmm.gif)no-repeat center center/cover;
-        /* border-radius:50% 0 0 0; */
-    }
-    50%{
-        top:600px;
-        left:390px;
-        background:url(../../img/nnnn.gif)no-repeat center center/cover;;;
-        /* border-radius:50% 50% 0 0; */
-    }
-    75%{
-        top:600px;
-        left:0;
-        background:url(../../img/44.gif)no-repeat center center/cover;
-        /* border-radius:50% 50% 50% 0; */
-    }
-    100%{
-        top:0;
-        left:0;
-        background:url(../../img/vvvv.gif)no-repeat center center/cover;
-        /* border-radius:50% 50% 50% 50%; */
-
-    }
-
-}
-
-.btns{
+h1{
+    color:#333;
     display: flex;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 30rem;
-    margin-left: 15rem;
-    /* padding: 20px; */
+    font-size:40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.btn {
-    display:inline-block;
-    /* text-align: centser; */
+
+p{
+    font-size:15px;
+    margin: 0 2rem;
+}
+
+header{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
+    text-align:center;
+    /* height:100vh;
+    padding: 0 2rem;
+    margin-bottom:0.75rem; */
+    font-size: 20px;
+    --animate-speed:1s;
+}  
+
+.box{
+    display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin:1rem;
+    /* padding:0.75rem;
+    width:2rem; */
+}
+
+img{
+    width:270px;
+    
+    
+}
+
+/* .container{
+    display:flex;
+} */
+
+.btns{
+    display:flex;
+    align-items: center;
     /* display: flex; */
     justify-content: center;
-    align-items: center;
-    padding:8px 10px;
-    margin:0.4rem;
+    flex-direction: row;
+    margin:1.5rem 0;
+}
+.btn {
+    text-align: center;
     text-decoration:none;
     color:#333;
     background:chartreuse;
     border:none;
-    border-radius:1rem;
+    border-radius:3rem;
+    width: 6rem;
+    height: 1.5rem;
+    padding-top: 5px;
+    /* margin: 0 1rem; */
+}
+
+.btn:hover{
+    background:#333;
+    color:#fff;
+}
+
+/* page animation */
+#page-4 h1{
+transform: translateY(-1200px);
+animation:heading var(--animate-speed)forwards ease-in;
+} 
+
+#page-4 p{
+transform: translateX(-1800px);
+animation:text var(--animate-speed)forwards ease-in 1s;
+} 
+
+/* keyframe */
+@keyframes heading{
+to{
+    transform: translateY(0); 
+}
+}
+
+@keyframes text{
+to{
+    transform: translateX(0); 
+}
 }
 
 
-.btn:hover{
-    background:orange;
-    color:#fff;
+h1.a{
+    text-shadow: 0.2rem 0.2rem steelblue;
 }
