--- a/view/page5.html
+++ b/view/page5.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page5.css">
-    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/page5.css"> 
-    <title>Animated Picture</title>
+    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page4.css">
+    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/page4.css">                 
+    <title>H A L School </title>
 </head>
 <body>
-    <div class="box"></div>
-    <div class="btns">
-        <a href="./page4.html" class="btn">Prev Page</a>
-        <a href="./page6.html" class="btn">Final Page</a>
+    <section id="page-4">
+    <header>
+    <h1 class="a" >H A L School</h1>
+    <p>HAL School , one of the best schools of Hyderabad with the best teachers who have and are still shaping brilliant minds!</p>
+
+</header>
+<div class="container">
+<div class="box">
+<img src="../img/i.jpg" alt="my img">
+<img src="../img/y.jpg" alt="my img">
+<img src="../img/w.jpg" alt="my img">
+<img src="../img/u].jpg" alt="my img">
+<img src="../img/q.jpg" alt="my img">
+<img src="../img/e.jpg" alt="my img">
+<img src="../img/r.jpg" alt="my img">
+<img src="../img/tt.jpg" alt="my img">
+<img src="../img/yy.jpg" alt="my img">
 </div>
+</div>
+<div class="btns">
+        <a href="./page3.html" class="btn">Prev Page</a>
+        <a href="./page5.html" class="btn">Next Page</a>
+</div>
+</section>
+
 </body>
 </html>
