--- a/view/page6.html
+++ b/view/page6.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page6.css">
-    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/tablet/page6.css">                 
-    <title>Thank You</title>
+    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page5.css">
+    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/page5.css"> 
+    <title>Animated Picture</title>
 </head>
 <body>
-    <header>
-    <h1 class="a">Thank You</h1><br>
-    <a href="../index.html" class="btn">Home Page</a>
-</header>
+    <div class="box"></div>
+    <div class="btns">
+        <a href="./page4.html" class="btn">Prev Page</a>
+        <a href="./page6.html" class="btn">Final Page</a>
+</div>
 </body>
 </html>
