--- a/view/page7.html
+++ b/view/page7.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page6.css">
-    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/tablet/page6.css">                 
+    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page7.css">
+    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/page7.css">                 
     <title>Thank You</title>
 </head>
 <body>
