--- a/view/page3.html
+++ b/view/page3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/page3.css">
+    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/page3.css">
     <title>About Smart Cities </title>
 </head>
 <body>
