--- a/view/page3.html
+++ b/view/page3.html
@@ -13,6 +13,11 @@
     <h1>Smart Town</h1>
     <p>A Smart city is an urban area that uses different types of electronic Internet of things (IoT) sensors to collect data and then use these data to manage assets and resources efficiently. This includes data collected from citizens, devices, and assets that is processed and analyzed to monitor and manage traffic and transportation systems, power plants, water supply networks, waste management, crime detection, information systems, schools, libraries, hospitals, and other community services.</p>
     </header>
+    <section>
+        <div class="box"></div>
+        <!-- <div class="box"></div> -->
+    </section>
+   
 
 
 </body>
