--- a/css/desktop/page3.css
+++ b/css/desktop/page3.css
@@ -19,3 +19,45 @@ p{
     color:white;
     font-size: 25px;
 }
+
+.box{
+    background:url(../../img/ll.gif)no-repeat center center/cover;
+    width: 400px;
+    height:300px;
+    position: relative;
+    top:0;
+    left:0;
+    animation:animate1 5s forwards ease-in-out;
+
+}
+
+
+
+@keyframes animate1{
+    25%{
+        top:0;
+        left:950px;
+        background:url(../../img/ll.gif)no-repeat center center/cover;
+        /* border-radius:50% 0 0 0; */
+    }
+    25%{
+        top:30px;
+        right:950px;
+        background:url(../../img/777.gif)no-repeat center center/cover;;;
+        /* border-radius:50% 50% 0 0; */
+    }
+    /* 75%{
+        top:300px;
+        left:0;
+        background:url(../../img/44.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 0; */
+    }
+    /* 100%{
+        top:0;
+        left:0;
+        background:url(../../img/vvvv.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 50%; */
+
+    } */ */
+
+}
