--- a/view/page3.html
+++ b/view/page3.html
@@ -17,6 +17,12 @@
         <div class="box"></div>
         <!-- <div class="box"></div> -->
     </section>
+
+    <div class="btns">
+        <a href="./page2.html" class="btn">Prev Page</a>
+        <a href="./page4.html" class="btn">Next Page</a>
+ 
+</div>
    
 
 
