--- a/css/desktop/page3.css
+++ b/css/desktop/page3.css
@@ -62,7 +62,7 @@ p{
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    padding:8px 10px;
+    /* padding:8px 10px; */
     margin:0.4rem;
     text-decoration:none;
     color:#333;
