--- a/css/desktop/page3.css
+++ b/css/desktop/page3.css
@@ -62,8 +62,9 @@ p{
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    /* padding:8px 10px; */
-    margin:0.6rem;
+    padding:15px 10px;
+    margin:0.4rem;
+    margin-top:20px;
     text-decoration:none;
     color:#333;
     background:chartreuse;
