--- a/css/desktop/page6.css
+++ b/css/desktop/page6.css
@@ -19,7 +19,7 @@ body{
     25%{
         top:0;
         left:950px;
-        background:url(../../img/nnnn.gif)no-repeat center center/cover;
+        background:url(../../img/ooooo.gif)no-repeat center center/cover;
         /* border-radius:50% 0 0 0; */
     }
     50%{
