--- a/css/desktop/page6.css
+++ b/css/desktop/page6.css
@@ -3,7 +3,7 @@ body{
 }
 
 .box{
-    background:url(../../img/mmm.gif)no-repeat center center/cover;
+    background:url(../../img/ooooo.gif)no-repeat center center/cover;
     width: 400px;
     height:300px;
     position: relative;
@@ -19,7 +19,7 @@ body{
     25%{
         top:0;
         left:950px;
-        background:url(../../img/mmmm.gif)no-repeat center center/cover;
+        background:url(../../img/ooooo.gif)no-repeat center center/cover;
         /* border-radius:50% 0 0 0; */
     }
     50%{
