--- a/css/desktop/page6.css
+++ b/css/desktop/page6.css
@@ -3,7 +3,7 @@ body{
 }
 
 .box{
-    background:url(../../img/ooooo.gif)no-repeat center center/cover;
+    /* background:url(../../img/ooooo.gif)no-repeat center center/cover; */
     width: 400px;
     height:300px;
     position: relative;
