--- a/view/page2.html
+++ b/view/page2.html
@@ -15,30 +15,30 @@
     <div class="container">
         <div class="box">
          <h3>Sports</h3>
-         <p> > Cricket grounds</p>
-         <p> > Two indoor batminton courts</p>
-         <p> > Cricket coaching</p>
-         <p> > Basket ball court</p>
+         <p> > <a href="cricket.html">Cricket grounds</a></p>
+         <p> > <a href="batminton courts.html">Two indoor batminton courts</a></p>
+         <p> > <a href="coaching.html">Cricket coaching</a></p>
+         <p> ><a href="basket.html"> Basket ball court</a></p>
         </div>
         <div class="box">
          <h3>Life style</h3>
-         <p> > There are different quaters</p>
-         <p> > Hospitals</p>
-         <p> > There are swimming pools</p>
-         <p> > Worship places</p>
+         <p> > <a href="house.html"> Quaters</a></p>
+         <p> > <a href="hospital.html">Hospitals</a></p>
+         <p> > <a href="pools.html"> Swimming pools</a></p>
+         <p> > <a href="worship.html">Worship places</a></p>
         </div>
         <div class="box">
          <h3>Environment</h3>
-         <p> > Gardens</p>
-         <p> > Parks</p>
-         <p> > Outdoor GYM</p>
+         <p> > <a href="garden.html">Gardens</a></p>
+         <p> > <a href="parks.html">Parks</a></p>
+         <p> > <a href="gym.html">Outdoor GYM</a></p>
          <!-- <p> > Many trees</p> -->
  
         </div>
         <div class="box">
          <h3>Security</h3>
-         <p> > Guards at the gates</p>
-         <p> > Secured with CCTV</p>
+         <p> > <a href="guard.html">Guards at the gates</a></p>
+         <p> > <a href="cctv.html">Secured with CCTV</a></p>
         
         </div>  
     </div>
