--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -1,6 +1,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
-    background:url('../../img/2.jpg')no-repeat center center/cover;
+    background:url('../../img/llll.jpg')no-repeat center center/cover;
     color:#fff;
     overflow:hidden;
     /* max-width:  1110px; */
@@ -43,7 +43,7 @@ h1{
 } 
 
 p{
-    color:red;
+    color:khaki;
     font-size:35px;
 }
 
