--- a/css/desktop/page2.css
+++ b/css/desktop/page2.css
@@ -39,7 +39,17 @@ h1.a{
     /* flex-direction: column; */
 }
 
+.box p{
+    text-decoration: none;
+}
+
+a{
+    text-decoration:none;
+    color:black;
+}
+
 .box{
+    
     padding:2rem;
     margin:2rem;
     background:tan;
@@ -83,6 +93,7 @@ h3{
 
 p{
     color:brown;
+    
 }
 
 /* page animation */
