--- a/view/cctv.html
+++ b/view/cctv.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/parks.css">
-    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/parks.css">
-    <title>Parks</title>
+    <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/cctv.css">
+    <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/cctv.css">
+    <title>CCTV Security</title>
 </head>
 <body>
-    <h1>Parks</h1>
+    <h1>CCTV Vision</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dicta earum officiis labore vitae, expedita cumque blanditiis libero praesentium distinctio error rem quo inventore ullam natus esse iure voluptates ut!</p>
     <img src="../img/i.jpg" alt="my img">
         <img src="../img/y.jpg" alt="my img">
