--- a/view/gym.html
+++ b/view/gym.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" media="screen and (min-width: 320px)  and (max-width:1000px)" href="../css/mobile/gym.css">
     <link rel="stylesheet" media="screen and (min-width: 1001px) " href="../css/desktop/gym.css">
-    <title>Document</title>
+    <title>Fitness</title>
 </head>
 <body>
-    
+    <h1>OutDoor GYM</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dicta earum officiis labore vitae, expedita cumque blanditiis libero praesentium distinctio error rem quo inventore ullam natus esse iure voluptates ut!</p>
+    <img src="../img/i.jpg" alt="my img">
+        <img src="../img/y.jpg" alt="my img">
+        <img src="../img/u].jpg" alt="my img">
+        <img src="../img/q.jpg" alt="my img">
 </body>
 </html>
