--- a/css/mobile/page3.css
+++ b/css/mobile/page3.css
@@ -23,7 +23,7 @@ p{
 .box{
     background:url(../../img/ll.gif)no-repeat center center/cover;
     width: 400px;
-    height:300px;
+    height:250px;
     position: relative;
     top:0;
     left:0;
@@ -40,12 +40,12 @@ p{
         background:url(../../img/ll.gif)no-repeat center center/cover;
         /* border-radius:50% 0 0 0; */
     }
-    25%{
+    /* 25%{
         top:30px;
         right:950px;
         background:url(../../img/777.gif)no-repeat center center/cover;;;
         /* border-radius:50% 50% 0 0; */
-    }
+    } */
 
 
 }
@@ -64,7 +64,7 @@ p{
     align-items: center;
     padding:15px 10px;
     margin:0.4rem;
-    margin-top:20px;
+    margin-top:25px;
     text-decoration:none;
     color:#333;
     background:chartreuse;
