--- a/view/cricket.html
+++ b/view/cricket.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <h1>Cricket Grounds</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quae commodi hic voluptas soluta id impedit illum unde qui. Ratione.</p>
     <div class="container">
         <div class="box">
-        <img src="../img/i.jpg" alt="my img">
-        <img src="../img/y.jpg" alt="my img">
-        <img src="../img/u].jpg" alt="my img">
-        <img src="../img/q.jpg" alt="my img">
+        <img src="../img/.jpg" alt="my img">
+        <img src="../img/.jpg" alt="my img">
+        <img src="../img/.jpg" alt="my img">
+        <!-- <img src="../img/q.jpg" alt="my img"> -->
 
         </div>
         </div>
