--- a/css/desktop/cricket.css
+++ b/css/desktop/cricket.css
@@ -2,6 +2,16 @@ body{
     background: orange;
 }
 
+p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
+    color:#fff;
+    font-size: 25px;
+    
+}
+
 h1{
     color:#333;
     display: flex;
@@ -10,10 +20,15 @@ h1{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+    h1{
+        text-shadow: 0.2rem 0.2rem rgb(206, 122, 12);
+    }
+
 .box{
-    padding: 1rem;
-    margin:1rem;
-justify-content: center;
-    /* padding:0.75rem;
-    width:2rem; */
+    /* padding: 0.75rem; */
+    /* margin:0.75rem; */
+/* justify-content: collum; */
+    padding:0.75rem; 
+    width:2rem; 
 }
