--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -2,8 +2,9 @@ body {
     font-family:Arial, Helvetica, sans-serif;
     background:url('../../img/llll.jpg')no-repeat center center/cover;
     color:#fff;
-    overflow:hidden;
-    /* max-width:  1110px; */
+    /* overflow */
+    /* background-color: rgba(0, 0, 0, 0); */
+
 }
 
 .btn {
@@ -43,7 +44,7 @@ h1{
 } 
 
 p{
-    color:khaki;
+    color:lawngreen;
     font-size:35px;
 }
 
