--- a/css/desktop/page7.css
+++ b/css/desktop/page7.css
@@ -3,37 +3,45 @@ body{
     /* width: 1000px; */
 }
 header{
-display:flex;
-flex-direction:column;
-justify-content: center;
-align-items:center;
-text-align:center;
-height:100vh;
-padding: 0 2rem;
-margin-bottom:0.75rem;
-font-size: 20px;
 --animate-speed: 1s;
 
 }
 
+section{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    padding:1px;
+    /* align-items:center; */
+    text-align: center;
+}
+
 h1{
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-font-size: 100px;
+font-size: 80px;
 color:#fff;
 }
-.btn {
-display:inline-block;
-/* display: flex; */
-justify-content: center;
-align-items: center;
-padding:8px 10px;
-text-decoration:none;
-color:#333;
-background:chartreuse;
-border:none;
-border-radius:3rem;
-font-size: 30px;
+.btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:14rem;
 }
+.btn {
+    display:inline-block;
+    /* text-align: centser; */
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    padding:8px 10px;
+    margin:0.4rem;
+    text-decoration:none;
+    color:#333;
+    background:chartreuse;
+    border:none;
+    border-radius:3rem;
+}
+
 
 .btn:hover{
 background:#333;
@@ -42,4 +50,44 @@ color:#fff;
 
 h1.a{
 text-shadow: 0.2rem 0.2rem steelblue;
+}
+
+.box{
+    /* background:url(../../img/ooooo.gif)no-repeat center center/cover; */
+    width: 300px;
+    height:300px;
+    position: relative;
+    top:0;
+    left:0;
+    animation:animate1 5s forwards ease-in-out;
+
+}
+
+@keyframes animate1{
+    25%{
+        top:0;
+        left:950px;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 0 0 0; */
+    }
+    50%{
+        top:300px;
+        left:950px;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 0 0; */
+    }
+    75%{
+        top:300px;
+        left:0;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 0; */
+    }
+    100%{
+        top:0;
+        left:0;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 50%; */
+
+    }
+
 }
