--- a/css/mobile/page2.css
+++ b/css/mobile/page2.css
@@ -13,6 +13,11 @@ header{
     
 }
 
+a{
+    text-decoration: none;
+    color:#333;
+}
+
 body{
     background:url(../../img/666.jpeg)no-repeat center center/cover;
     /* height: 640px; */
@@ -86,6 +91,7 @@ h3{
 
 p{
     color:brown;
+    /* text-decoration: none; */
 }
 
 /* page animation */
