--- a/css/mobile/page6.css
+++ b/css/mobile/page6.css
@@ -3,9 +3,9 @@ body{
 }
 
 .box{
-    background:url(../../img/mmm.gif)no-repeat center center/cover;
-    width: 200px;
-    height:200px;
+    /* background:url(../../img/mmm.gif)no-repeat center center/cover; */
+    width: 150px;
+    height:150px;
     position: relative;
     top:0;
     left:0;
@@ -18,18 +18,18 @@ body{
 @keyframes animate1{
     25%{
         top:0;
-        left:390px;
-        background:url(../../img/mmm.gif)no-repeat center center/cover;
+        left:170px;
+        background:url(../../img/ooooo.gif)no-repeat center center/cover;
         /* border-radius:50% 0 0 0; */
     }
     50%{
-        top:600px;
-        left:390px;
+        top:100px;
+        left:170px;
         background:url(../../img/nnnn.gif)no-repeat center center/cover;;;
         /* border-radius:50% 50% 0 0; */
     }
     75%{
-        top:600px;
+        top:100px;
         left:0;
         background:url(../../img/44.gif)no-repeat center center/cover;
         /* border-radius:50% 50% 50% 0; */
@@ -49,8 +49,8 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 30rem;
-    margin-left: 15rem;
+    /* margin: 30rem; */
+    /* margin-left: 15rem; */
     /* padding: 20px; */
 }
 .btn {
