--- a/view/page7.html
+++ b/view/page7.html
@@ -10,8 +10,12 @@
 </head>
 <body>
     <header>
-    <h1 class="a">Thank You</h1><br>
+        <div class="box"></div>
+    <div class="btns">   
     <a href="../index.html" class="btn">Home Page</a>
+</div> 
+
+    
 </header>
 </body>
 </html>
