--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -1,9 +1,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
-    background:url('../../img/llll.jpg')no-repeat center center/cover;
-    color:#fff;
-    /* overflow */
-    /* background-color: rgba(0, 0, 0, 0); */
+    background:url(../../img/kkk.jpeg)no-repeat center center/cover;
 
 }
 
@@ -44,7 +41,7 @@ h1{
 } 
 
 p{
-    color:lawngreen;
+    color:brown;
     font-size:35px;
 }
 
