--- a/css/desktop/page7.css
+++ b/css/desktop/page7.css
@@ -77,15 +77,16 @@ text-shadow: 0.2rem 0.2rem steelblue;
         /* border-radius:50% 50% 0 0; */
     }
     75%{
-        top:300px;
-        left:0;
+        top:00px;
+        left:450px;
         background:url(../../img/lk.gif)no-repeat center center/cover;
         /* border-radius:50% 50% 50% 0; */
     }
     100%{
         top:0;
-        left:0;
+        left:0px;
         background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 50%; */
         /* border-radius:50% 50% 50% 50%; */
 
     }
