--- a/view/coaching.html
+++ b/view/coaching.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Cricket Coaching</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, veritatis! Quod aut culpa dignissimos cum quaerat totam esse eos impedit.</p>
+    <p>There is cricket coaching for the one who wants to improve his/her skills in this game .</p>
     <img src="../img/y.jpg" alt="my img">
 <img src="../img/w.jpg" alt="my img">
 <img src="../img/u].jpg" alt="my img">
