--- a/view/cricket.html
+++ b/view/cricket.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Cricket Grounds</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quae commodi hic voluptas soluta id impedit illum unde qui. Ratione.</p>
+    <p>For All the cricket lover there are two big cricket grounds were you can came and enjoy your sport. </p>
     <div class="container">
         <div class="box">
         <img src="../img/.jpg" alt="my img">
