--- a/view/page2.html
+++ b/view/page2.html
@@ -22,7 +22,7 @@
         </div>
         <div class="box">
          <h3>Life style</h3>
-         <p> > <a href="house.html"> Quaters</a></p>
+         <p> > <a href="house.html"> Quarters</a></p>
          <p> > <a href="hospital.html">Hospitals</a></p>
          <p> > <a href="pools.html"> Swimming pools</a></p>
          <p> > <a href="worship.html">Worship places</a></p>
