--- a/view/basket.html
+++ b/view/basket.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Basketball Courts</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dicta earum officiis labore vitae, expedita cumque blanditiis libero praesentium distinctio error rem quo inventore ullam natus esse iure voluptates ut!</p>
+    <p>There is a good maintained basket ball court. </p>
     <img src="../img/i.jpg" alt="my img">
         <img src="../img/y.jpg" alt="my img">
         <img src="../img/u].jpg" alt="my img">
