--- a/view/house.html
+++ b/view/house.html
@@ -9,8 +9,8 @@
     <title>Quaters</title>
 </head>
 <body>
-    <h1>Quaters</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dicta earum officiis labore vitae, expedita cumque blanditiis libero praesentium distinctio error rem quo inventore ullam natus esse iure voluptates ut!</p>
+    <h1>Quarters</h1>
+    <p>There are good maintain house provided to the officers.</p>
     <img src="../img/i.jpg" alt="my img">
         <img src="../img/y.jpg" alt="my img">
         <img src="../img/u].jpg" alt="my img">
