--- a/css/mobile/main.css
+++ b/css/mobile/main.css
@@ -1,6 +1,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
-    background:url(../../img/llll.jpg)no-repeat center center/cover;
+    background:url(../../img/kkk.jpeg)no-repeat center center/cover;
     color:#fff;
     overflow:hidden;
     /* max-width:  1110px; */
@@ -12,7 +12,7 @@ a{
 }
 
 .btn {
-    display:inline-block;
+    display:inline-block; 
     color:#333;
     background:#93cb52;
     text-decoration: none;
