--- a/css/mobile/page7.css
+++ b/css/mobile/page7.css
@@ -21,25 +21,78 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 font-size: 100px;
 color:#fff;
 }
+.btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* margin: 30rem; */
+    /* margin-left: 15rem; */
+    /* padding: 20px; */
+}
 .btn {
-display:inline-block;
-/* display: flex; */
-justify-content: center;
-align-items: center;
-padding:8px 10px;
-text-decoration:none;
-color:#333;
-background:chartreuse;
-border:none;
-border-radius:3rem;
-font-size: 30px;
+    display:inline-block;
+    /* text-align: centser; */
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    padding:8px 10px;
+    margin:1rem;
+    text-decoration:none;
+    color:#333;
+    background:chartreuse;
+    border:none;
+    border-radius:1rem;
 }
 
+
 .btn:hover{
-background:#333;
-color:#fff;
+    background:orange;
+    color:#fff;
 }
 
 h1.a{
 text-shadow: 0.2rem 0.2rem steelblue;
+}
+
+
+.box{
+    /* background:url(../../img/ooooo.gif)no-repeat center center/cover; */
+    width: 150px;
+    height:150px;
+    position: relative;
+    top:0;
+    left:0;
+    animation:animate1 5s forwards ease-in-out;
+
+}
+
+@keyframes animate1{
+    25%{
+        top:0;
+        left:0px;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 0 0 0; */
+    }
+    50%{
+        top:0px;
+        left:0px;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 0 0; */
+    }
+    75%{
+        top:00px;
+        left:0px;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 0; */
+    }
+    100%{
+        top:0;
+        left:0px;
+        background:url(../../img/lk.gif)no-repeat center center/cover;
+        /* border-radius:50% 50% 50% 50%; */
+        /* border-radius:50% 50% 50% 50%; */
+
+    }
+
 }
