--- a/view/hospital.html
+++ b/view/hospital.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Hospital</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dicta earum officiis labore vitae, expedita cumque blanditiis libero praesentium distinctio error rem quo inventore ullam natus esse iure voluptates ut!</p>
+    <p>Hospital with the best Doctors are always ready and available for taking care of your health.</p>
     <img src="../img/i.jpg" alt="my img">
         <img src="../img/y.jpg" alt="my img">
         <img src="../img/u].jpg" alt="my img">
