--- a/css/mobile/page6.css
+++ b/css/mobile/page6.css
@@ -58,7 +58,7 @@ body{
     /* text-align: centser; */
     /* display: flex; */
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     padding:8px 10px;
     margin:0.4rem;
     text-decoration:none;
