--- a/css/mobile/page6.css
+++ b/css/mobile/page6.css
@@ -57,7 +57,7 @@ body{
     display:inline-block;
     /* text-align: centser; */
     /* display: flex; */
-    justify-content: center;
+    /* justify-content: center */
     /* align-items: center; */
     padding:8px 10px;
     margin:0.4rem;
